builder widget spacing issue fix

--- a/src/styles/sass/components/input-box/inputBox.module.scss
+++ b/src/styles/sass/components/input-box/inputBox.module.scss
@@ -375,6 +375,9 @@
             justify-content: space-between;
             align-items: center;
             .BoxButtons {align-items: flex-end;}
+            .leftCol {width: 25%;}
+            .centerCol {width: 50%;}
+            .rightCol {width: 25%;}
          }
          
          .SearchForm {
